deploy/webapp-dev.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      name: webapp
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: johnlemmon/covid-dashboard
        ports:
        - name: webapp-wsgi
          containerPort: 8000
        volumeMounts:
        - name: webapp-data
          mountPath: /var/lib/covid-dashboard
        - name: webapp-src
          mountPath: /app
        imagePullPolicy: Never
      volumes:
      - name: webapp-data
        persistentVolumeClaim:
          claimName: webapp-data
      - name: webapp-src
        hostPath:
          path: /covid_dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
  - port: 8000
