deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: covid-webapp
spec:
  rules:
  - host: covid-africa.com
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 8000
  - host: covid-africa.info
    http: *http_rules
